# rsd-academies-db-migration

./: .gitignore  Dockerfile  README.md  academies_database.py  compose.yml  fly.toml  pipelines.py  pyproject.toml  services.compose.yml  services.json  usage_reports.py
.github/workflows/: deploy.yml
docs/: working-group.md
nginx/: default.conf.template
scripts/: bootstrap  build  clean  generate-data-usage-csvs  server
scripts/extract-schemas/: _helper.sh  academies-academisation-api.sh  academies-api.sh  amsd-casework.sh  dfe-complete-conversions-transfers-and-changes.sh
